[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Sprites and sheets/Enemies/Spider Sheet V2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Hell Spider Webbed.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Retro Explosion Short 15.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/Retro Impact Punch Hurt 01.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/TestParticle.png" type="Texture" id=5]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.919255 )
colors = PoolColorArray( 0.968627, 0.956863, 0.321569, 1, 0.227451, 0.0745098, 0.0941176, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 16 )

[sub_resource type="Animation" id=10]
resource_name = "explode"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "ground_walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "hanging"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "wall_walk"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "web_destroy"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("WebParticles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WebParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WebLine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.345098, 0.0745098, 0.0392157, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3, 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="SegmentShape2D" id=11]
b = Vector2( 0, -0.5 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 9.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 2.5 )

[node name="Hell Spider Webbed" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 34
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -100.0 ]
}

[node name="WebParticles" type="Particles2D" parent="."]
position = Vector2( 0, -50 )
emitting = false
amount = 25
process_material = SubResource( 13 )
texture = ExtResource( 5 )

[node name="WebLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0 )
width = 1.0
default_color = Color( 0.929412, 0.933333, 0.933333, 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hanging"
anims/explode = SubResource( 10 )
anims/ground_walk = SubResource( 8 )
anims/hanging = SubResource( 12 )
anims/wall_walk = SubResource( 6 )
anims/web_destroy = SubResource( 14 )

[node name="BodyCollide" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 9 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 16
collision_mask = 4

[node name="HitBoxCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="WebBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -1, 0 )
shape = SubResource( 11 )

[node name="AttBox" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttBox"]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="HitWall" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 16
collision_mask = 2

[node name="PhaseOneBox" type="CollisionShape2D" parent="HitWall"]
position = Vector2( -1, 0 )
shape = SubResource( 5 )

[node name="PhaseTwoBox" type="CollisionShape2D" parent="HitWall"]
position = Vector2( -1, -5 )
shape = SubResource( 7 )
disabled = true

[node name="EdgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -7, 0 )
cast_to = Vector2( 0, 41 )
collision_mask = 2
collide_with_areas = true

[node name="EdgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 5, 0 )
cast_to = Vector2( 0, 41 )
collision_mask = 2
collide_with_areas = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -0.6

[node name="PunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="WebRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -250 )
collision_mask = 2
collide_with_areas = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="AttBox" to="." method="_on_AttBox_area_entered"]
[connection signal="body_entered" from="HitWall" to="." method="_on_HitWall_body_entered"]
